--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" >
 <head>
+<meta property="og:type" content="video.other" />
+<meta property="og:title" content="Arabian Citadel" />
+<meta property="og:site_name" content="Discord" />
+<meta property="og:url" content="https://media1.tenor.com/images/7dfa79ea4778a5b6522bab3647577514/tenor.gif" />
+<meta property="og:image" content="https://media1.tenor.com/images/7dfa79ea4778a5b6522bab3647577514/tenor.gif" />
+<meta property="og:image:secure_url" content="https://media1.tenor.com/images/7dfa79ea4778a5b6522bab3647577514/tenor.gif" />
+<meta property="og:image:alt" content="Arabian Citadel Server on Discord" />
+<meta property="og:image:width" content="800" />
+<meta property="og:image:height" content="600" />
+  <link rel="canonical" href="https://discord.gg/ZwxwsyhCjC" />
   <meta charset="UTF-8">
   <title>Arabian Citadel • Discord Server</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
