--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" >
 <head>
+<meta name="theme-color" content="#9ACD29">
 <meta property="og:type" content="video.other" />
 <meta property="og:title" content="Arabian Citadel" />
 <meta property="og:site_name" content="Discord" />
