--- a/discord/servers/index.html
+++ b/discord/servers/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" >
 <head>
-<meta name="theme-color" content="#9ACD29">
+<meta name="theme-color" content="#000000">
 <meta property="og:type" content="video.other" />
 <meta property="og:title" content="Arabian Citadel" />
-<meta property="og:site_name" content="Discord" />
-<meta property="og:url" content="https://media1.tenor.com/images/7dfa79ea4778a5b6522bab3647577514/tenor.gif" />
-<meta property="og:image" content="https://media1.tenor.com/images/7dfa79ea4778a5b6522bab3647577514/tenor.gif" />
-<meta property="og:image:secure_url" content="https://media1.tenor.com/images/7dfa79ea4778a5b6522bab3647577514/tenor.gif" />
+<meta property="og:site_name" content="SENPAi" />
+<meta property="og:url" content="https://media.discordapp.net/attachments/858027452307341360/867855796175896596/Comp-1_4.gif" />
+<meta property="og:image" content="https://media.discordapp.net/attachments/858027452307341360/867855796175896596/Comp-1_4.gif" />
+<meta property="og:image:secure_url" content="https://media.discordapp.net/attachments/858027452307341360/867855796175896596/Comp-1_4.gif" />
 <meta property="og:image:alt" content="Arabian Citadel Server on Discord" />
 <meta property="og:image:width" content="800" />
 <meta property="og:image:height" content="600" />
