--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <meta property="og:type" content="video.other" />
 <meta property="og:title" content="Arabian Citadel" />
 <meta property="og:site_name" content="Discord" />
-<meta property="og:url" content="https://media1.tenor.com/images/7dfa79ea4778a5b6522bab3647577514/tenor.gif" />
-<meta property="og:image" content="https://media1.tenor.com/images/7dfa79ea4778a5b6522bab3647577514/tenor.gif" />
-<meta property="og:image:secure_url" content="https://media1.tenor.com/images/7dfa79ea4778a5b6522bab3647577514/tenor.gif" />
+<meta property="og:url" content="https://media.discordapp.net/attachments/858027452307341360/867855796175896596/Comp-1_4.gif" />
+<meta property="og:image" content="https://media.discordapp.net/attachments/858027452307341360/867855796175896596/Comp-1_4.gif" />
+<meta property="og:image:secure_url" content="https://media.discordapp.net/attachments/858027452307341360/867855796175896596/Comp-1_4.gif" />
 <meta property="og:image:alt" content="Arabian Citadel Server on Discord" />
 <meta property="og:image:width" content="800" />
 <meta property="og:image:height" content="600" />
