--- a/discord/servers/index.html
+++ b/discord/servers/index.html
@@ -11,7 +11,7 @@
 <meta property="og:image:alt" content="Arabian Citadel Server on Discord" />
 <meta property="og:image:width" content="800" />
 <meta property="og:image:height" content="600" />
-  <link rel="canonical" href="https://discord.gg/ZwxwsyhCjC" />
+  <link rel="canonical" href="https://ArCitadel.github.io" />
   <meta charset="UTF-8">
   <title>Arabian Citadel • Discord Server</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
